--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development nodemon app.js"
+    "start": "set NODE_ENV=production&& node app.js",
+    "dev": "set NODE_ENV=development&& nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
