--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.4",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.37.2",
+    "slugify": "^1.6.6"
   },
   "keywords": [],
   "author": "",
