--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "sequelize": "^6.37.2",
     "slugify": "^1.6.6"
