--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-BASE_URL=http://localhost:8900
+BASE_URL=http://localhost:8995
+NEXT_PUBLIC_BASE_URL=http://localhost:8995
+JWT_SECRET_KEY=dev_jwt_secret_key
