--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^11.1.7",
+    "i": "^0.3.7",
+    "jose": "^5.3.0",
     "next": "14.2.2",
+    "npm": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0"
