--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "framer-motion": "^11.1.7",
     "i": "^0.3.7",
     "jose": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "npm": "^10.7.0",
     "react": "^18",
