--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
     "i": "^0.3.7",
     "jose": "^5.3.0",
@@ -18,7 +19,8 @@
     "npm": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
