--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/js-cookie": "^3.0.6",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
+    "html-react-parser": "^5.1.10",
     "i": "^0.3.7",
     "jose": "^5.3.0",
     "js-cookie": "^3.0.5",
