frontend: admin paneli yetenekler bölümü veritabanından çağırılıp tablo şeklinde listelendi. Yetenek-ekle bölümü eklendi.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-BASE_URL=http://localhost:5018/api
-NEXT_PUBLIC_BASE_URL=http://localhost:5018/api
+BASE_URL=http://localhost:5029
+BASE_URL_API=http://localhost:5029/api
+NEXT_PUBLIC_BASE_URL=http://localhost:5029/api
 JWT_SECRET_KEY=dev_jwt_secret_key
