--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-BASE_URL=http://localhost:5127
-BASE_URL_API=http://localhost:5127/api
-NEXT_PUBLIC_BASE_URL=http://localhost:5127/api
+NEXT_PUBLIC_BASE_URL=http://localhost:5141
+BASE_URL_API=http://localhost:5141/api
+NEXT_PUBLIC_BASE_URL_API=http://localhost:5141/api
 JWT_SECRET_KEY=dev_jwt_secret_key
