--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,8 @@
-NEXT_PUBLIC_BASE_URL=http://localhost:4130
-BASE_URL_API=http://localhost:4130/api
-NEXT_PUBLIC_BASE_URL_API=http://localhost:4130/api
+# NEXT_PUBLIC_BASE_URL=http://localhost:5143
+# BASE_URL_API=http://localhost:5143/api
+# NEXT_PUBLIC_BASE_URL_API=http://localhost:5143/api
+NEXT_PUBLIC_BASE_URL=https://myportfolio-production-e948.up.railway.app
+BASE_URL_API=https://myportfolio-production-e948.up.railway.app/api
+NEXT_PUBLIC_BASE_URL_API=https://myportfolio-production-e948.up.railway.app/api
 JWT_SECRET_KEY=dev_jwt_secret_key
+
