--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "set NODE_ENV=production&& node app.js",
-    "dev": "set NODE_ENV=development&& nodemon app.js"
+    "dev": "set NODE_ENV=development&& nodemon app.js",
+    "migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
