--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development PORT=3050 DB_PASSWORD=Cj5J7A2ioiSphRk8 JWTPRIVATEKEY=mysecretkey nodemon app.js",
-    "prod": "cross-env NODE_ENV=production PORT=8080 nodemon app.js"
+    "dev": "cross-env NODE_ENV=development PORT=3010 DB_PASSWORD=Cj5J7A2ioiSphRk8 JWTPRIVATEKEY=mysecretkey nodemon app.js",
+    "prod": "cross-env NODE_ENV=production PORT=8080 nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^6.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
