--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development PORT=3010 DB_PASSWORD=Cj5J7A2ioiSphRk8 JWTPRIVATEKEY=mysecretkey nodemon app.js",
     "prod": "cross-env NODE_ENV=production PORT=8080 nodemon app.js",
