--- a/frontend/.env
+++ b/frontend/.env
@@ -2,6 +2,6 @@
 # BASE_URL_API=http://13.53.197.245:8060/api
 # NEXT_PUBLIC_BASE_URL_API=http://13.53.197.245:8060/api
 JWT_SECRET_KEY=mysecretkey
-NEXT_PUBLIC_BASE_URL=http://localhost:3050
-BASE_URL_API=http://localhost:3050/api
-NEXT_PUBLIC_BASE_URL_API=http://localhost:3050/api
+NEXT_PUBLIC_BASE_URL=https://api.hismailkeskin.net
+BASE_URL_API=https://api.hismailkeskin.net/api
+NEXT_PUBLIC_BASE_URL_API=https://api.hismailkeskin.net/api
