--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "html-react-parser": "^5.1.10",
     "jose": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "lowlight": "^3.1.0",
     "next": "14.2.2",
     "npm": "^10.7.0",
     "react": "^18",
