--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.2",
     "npm": "^10.7.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "yup": "^1.4.0"
