--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,3 @@
-# NEXT_PUBLIC_BASE_URL=https://api.hismailkeskin.net
-# NEXT_PUBLIC_BASE_URL_API=https://api.hismailkeskin.net/api
-# JWT_SECRET_KEY=mysecretkey
-NEXT_PUBLIC_BASE_URL=http://localhost:3010
-NEXT_PUBLIC_BASE_URL_API=http://localhost:3010/api
+NEXT_PUBLIC_BASE_URL=https://api.hismailkeskin.net
+NEXT_PUBLIC_BASE_URL_API=https://api.hismailkeskin.net/api
 JWT_SECRET_KEY=mysecretkey
