--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "sharp": "^0.33.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
