--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-code": "^2.4.0",
     "@tiptap/extension-code-block-lowlight": "^2.6.6",
@@ -34,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
